test/analyzer/input_programs/invalid_programs/program01.tea
x := 7

## can't redeclare a variable that has
   already been declared ##

x := 9